add AzureContainers & AzureRMR to DESCRIPTION

--- a/serverless/DESCRIPTION
+++ b/serverless/DESCRIPTION
@@ -8,3 +8,6 @@ License: What license is it under?
 Encoding: UTF-8
 LazyData: true
 Suggests: testthat
+Imports: 
+    AzureContainers,
+    AzureRMR
