--- a/serverless/DESCRIPTION
+++ b/serverless/DESCRIPTION
@@ -3,10 +3,11 @@ Title: What the Package Does (one line, title case)
 Version: 0.0.0.9000
 Authors@R: person("First", "Last", email = "first.last@example.com", role = c("aut", "cre"))
 Description: What the package does (one paragraph).
-Depends: R (>= 3.5.1)
-License: What license is it under?
+Depends: R (>= 3.4)
+License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
 Suggests: testthat
 Imports: 
     yaml
+RoxygenNote: 6.0.1
