fixed error in template function and renamed some components

--- a/serverless/NAMESPACE
+++ b/serverless/NAMESPACE
@@ -4,6 +4,7 @@ export(buildAcrImage)
 export(buildDockerImage)
 export(createDockerfile)
 export(dockerfile_template)
+export(getPackageTitle)
 export(getUserInput)
 export(getUserInputDropdown)
 import(yaml)
