Created tmp folder and according functions + created new helper file

--- a/serverless/NAMESPACE
+++ b/serverless/NAMESPACE
@@ -3,8 +3,11 @@
 export(buildAcrImage)
 export(buildDockerImage)
 export(createDockerfile)
+export(create_tmp_and_dockerfile)
+export(delete_tmp_folder)
 export(dockerfile_template)
 export(getPackageTitle)
+export(getPath)
 export(getUserInput)
 export(getUserInputDropdown)
 import(yaml)
